--- a/index.html
+++ b/index.html
@@ -19,20 +19,14 @@
               style="
                 border: none;
                 background-color: transparent;
-                font-size: 20px;
-                border-bottom: 3px solid white;
+
+                border-bottom: 1px solid whitesmoke;
               "
               maxlength="15"
               type="text"
               placeholder="Please write your name"
             />
-            <button
-              style="
-                border: none;
-                background-color: transparent;
-                font-size: 20px;
-              "
-            >
+            <button style="border: none; background-color: transparent">
               Log In
             </button>
           </form>
@@ -51,7 +45,15 @@
         <!--TO DO List-->
         <div class="todo">
           <form id="todo-form">
-            <input type="text" placeholder="Write your plan📝" />
+            <input
+              style="
+                border: none;
+                background-color: transparent;
+                border-bottom: 1px solid whitesmoke;
+              "
+              type="text"
+              placeholder="Write your plan"
+            />
           </form>
           <ul id="todo-list"></ul>
         </div>
