lecture-js-done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         </div>
 
         <!--Weather-->
-        <div class="weather"></div>
+        <div class="weather__box">
+          <div id="weather">
+            <span></span>
+            <span></span>
+          </div>
+        </div>
 
         <!--TO DO List-->
         <div class="todo">
