css-done-before-add

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 border-bottom: 1px solid whitesmoke;
               "
               type="text"
-              placeholder="Write your plan"
+              placeholder="To Do List"
             />
           </form>
           <ul id="todo-list"></ul>
